--- a/Frontend/src/app/components/home/home.scss
+++ b/Frontend/src/app/components/home/home.scss
@@ -210,6 +210,7 @@ img{
       display: block;
       color: white;
       text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      margin-bottom: 3rem;
     }
 
     .title-highlight {
