--- a/Frontend/src/app/components/admin-dashboard/admin-dashboard.scss
+++ b/Frontend/src/app/components/admin-dashboard/admin-dashboard.scss
@@ -140,7 +140,7 @@ $admin-gradient-button: linear-gradient(135deg, $admin-primary-purple 0%, $admin
 .admin-buttons-row {
   display: flex;
   gap: 16px;
-  margin: 20px 0;
+  justify-content: center;
   align-items: center;
 
   // Responsive behavior
@@ -309,7 +309,9 @@ $admin-gradient-button: linear-gradient(135deg, $admin-primary-purple 0%, $admin
   padding: 28px;
   margin-bottom: 24px;
   border-radius: 18px;
+  width: 75%;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  margin: auto;
 
   &:hover {
     @include admin-hover-transform;
